fixed similar films wrong height bug

--- a/src/components/FilmDetails.css
+++ b/src/components/FilmDetails.css
@@ -24,7 +24,7 @@
     margin: 0 auto;
     width: 100%;
     height: 100%;
-    object-position: top;
+    object-position: center;
     object-fit: cover;
 }
 
